[gd_scene load_steps=23 format=2]

[ext_resource path="res://room_templates/canvas_nodes_and_scripts/next_level_button.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/LiftDoors-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/LiftBackground.png" type="Texture" id=3]
[ext_resource path="res://room_templates/canvas_nodes_and_scripts/LiftButton.gd" type="Script" id=4]
[ext_resource path="res://assets/environment/LiftButtonRed.png" type="Texture" id=5]
[ext_resource path="res://assets/environment/ShaftBlock.png" type="Texture" id=6]




[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 1224, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 612, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 408, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 204, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 204, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 408, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 612, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 1224, 0, 204, 143 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Close",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 30 ), SubResource( 30 ), SubResource( 30 ) ],
"loop": false,
"name": "Open",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5744, 35.234 )

[node name="ExitLift" type="Area2D"]
script = ExtResource( 1 )

[node name="LiftBackground" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="LiftDoors" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 16 )
animation = "Open"

[node name="ShaftBlock" type="Sprite" parent="LiftDoors"]
position = Vector2( 0, 100 )
texture = ExtResource( 6 )

[node name="LiftButton" type="Sprite" parent="."]
position = Vector2( 47.9961, 9.0217 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="PlayerContainer" type="StaticBody2D" parent="."]
collision_layer = 32768
collision_mask = 130

[node name="CollisionBox" type="CollisionPolygon2D" parent="PlayerContainer"]
visible = false
polygon = PoolVector2Array( -41.4738, 36.2058, -42.1412, -49.8913, 42.2874, -50.0582, 42.1206, 36.039, 52.7993, 36.2058, 52.7993, -60.9038, -52.4862, -60.5701, -52.4862, 36.2058 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
[connection signal="animation_finished" from="LiftDoors" to="." method="_on_LiftDoors_animation_finished"]
